trunk/Archive2/7a/7c556eb4de61e4/output
main.cpp:21:15: error: member 'foo' found in multiple base classes of different types
int main(){ a.foo(3); }
              ^
main.cpp:5:10: note: member found by ambiguous name lookup
    void foo(int a){ }  
         ^
main.cpp:10:10: note: member found by ambiguous name lookup
    void foo(int a){ }
         ^
1 error generated.
